fixed the css layout issue
This solution should work for most screen sizes, but it can be refined for for certion screen size, just go to the end of the css file

--- a/public/css/homepage.css
+++ b/public/css/homepage.css
@@ -10,9 +10,8 @@ body {
 /* Container */
 .container {
 	width: 100%;
-	margin-left: auto;
-	margin-right: auto;
-	height: auto;
+	--margin-left: auto;
+	--margin-right: auto;
 	background-color: #F5F5F5;
 }
 
@@ -20,9 +19,10 @@ body {
 .titular .tagline {
 	font-size: 60px;
 	color: #FFF;
-	font-family: Times New Roman;
+	font-family: Bahnschrift;
 	position: absolute;
-  	margin-top: 200px;
+  	--margin-top: 200px;
+	--top: 25%;
  	left: 50%;
  	transform: translate(-50%, -50%);
 	animation: effect 2s linear infinite; 
@@ -45,7 +45,7 @@ body {
 	color: #FFFFFF;
 	font-family: Bahnschrift;
 	position: absolute;
-	margin-top: 210px;;
+	--top: 50%; 
   	left: 50%;
   	transform: translate(-50%, -50%);
 	text-shadow: 1px 1px 4px #000000;
@@ -55,8 +55,8 @@ body {
 	font-size: 18px;
 	font-weight: 700;
 	font-family: Bahnschrift;
-	color: rgb(0,255,132);
-	border: 2px solid rgb(0,255,132);
+	color: rgb(0, 0, 0);
+	border: 2px solid rgb(2, 194, 101);
 	border-radius: 5px;
 	position: absolute;
   	top: 8%;
@@ -81,7 +81,8 @@ body {
 	border: none;
 	border-radius: 5px;
 	position: absolute;
-  	margin-top: 450px;
+  	/*margin-top: 450px;*/
+	top: 55%;
   	left: 50%;
   	transform: translate(-50%, -50%);
 	padding: 12px 25px;
@@ -95,11 +96,12 @@ body {
 	opacity: 70%;
 }
 
-
+/* context text that we can enter in the html*/
 .context {
     width: 100%;
     position: absolute;
-    top: 800px;   
+    top: 110%; 
+	height: 50vh;  
 }
 
 .context h1{
@@ -131,10 +133,10 @@ body {
 .area {
 	background: rgb(0,35,51); 
 	width: 100%;
-	height: 100vh;
+	height: 75vh;
 	display: flex;
-  justify-content: center;
-  align-items: center;
+  	justify-content: center;
+  	align-items: center;
 }
 
 .circles{
@@ -295,22 +297,29 @@ body {
 	font-family: Adobe Gothic Std;
 }
 
+/* the '@media' can be use to fix the layout of the webpage depending of the screen size
+	so this funtion work as a overide function
+*/
 
 
 @media screen and (max-width: 2000px) {
 	.titular .tagline {
 		font-size: 45px;
-		top: 30%;
+		top: 20%;
+	}
+	.titular .subtitle {
+		font-size: 25px;
+		top: 26vh;
 	}
 }
 @media screen and (max-width: 1500px) {
 	.titular .tagline {
-		font-size: 43px;
-		top: 10%;
+		font-size: 45px;
+		top: 15%;
 	}
 	.titular .subtitle {
-		font-size: 23px;
-		top: 15%;
+		font-size: 25px;
+		top: 22%;
 	}
 	.context h1 {
 		margin-top: 0;
@@ -324,14 +333,33 @@ body {
 @media screen and (max-width: 1000px) {
 	.titular .tagline {
 		font-size: 30px;
-		top: 8%;
+		top: 15%;
 	}
 	.titular .subtitle {
 		font-size: 18px;
-		top: 16%;
+		top: 20%;
 	}
 	.titular .btn {
-		margin-top: 330px;
+		--margin-top: 330px;
+		top: 50%;
+		font-size: 12px;
+		padding: 10px 20px;
+	}
+}
+
+
+@media screen and (max-width: 500px) {
+	.titular .tagline {
+		font-size: 30px;
+		top: 15%;
+	}
+	.titular .subtitle {
+		font-size: 18px;
+		top: 22%;
+	}
+	.titular .btn {
+		--margin-top: 330px;
+		top: 50%;
 		font-size: 12px;
 		padding: 10px 20px;
 	}
